<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">全自动革兰氏染色仪器</string>
    <string name="action_settings">Settings</string>
    <!-- general -->
    <string name="button_normal_sure">确认</string>
    <string name="button_normal_cancel">取消</string>
    <string name="button_normal_continue">继续</string>
    <string name="week">周%s</string>
    <string name="month_and_day">%1$s月%2$s日</string> <!-- xliff 多格式化语法 -->
    <string name="am">上午</string>
    <string name="pm">下午</string>
    <string name="switch_open">开启</string>
    <string name="switch_close">关闭</string>
    <string name="btn_back">返回</string>
    <string name="btn_exit">退出</string>
    <string name="btn_start">START</string>
    <string name="btn_next">下一步</string>
    <string name="back_to_home">系统即将返回主界面...</string>
    <string name="succ_ranse">染色结束，请拿出载玻片</string>
    <string name="succ_liulu">B-流路检测结束</string>
    <string name="succ_chengzhong">称重校验结束</string>
    <string name="succ_fill">填充流路结束</string>
    <string name="succ_centrifugal">细胞离心结束</string>
    <string name="waiting">Waiting...</string>
    <!-- exception -->
    <string name="exception_hint">【提示】</string>
    <string name="exception_exception">【警告】</string>
    <string name="exception_init_not_connected">设备初始化失败，请重新启动</string>
    <string name="exception_not_comm_actived">系统通信链路中断，请重新启动</string>
    <string name="exception_of_electric_speed">电机转速异常，请联系技术人员</string>
    <string name="exception_top_cover_opened">设备上盖打开，请关闭上盖</string>
    <string name="exception_top_cover_opened_dyeing">上盖被打开，请关闭上盖重新开始</string>
    <string name="exception_top_cover_opened_cleaning">上盖被打开，请关闭上盖重新开始</string>
    <string name="exception_top_cover_opened_filling">上盖被打开，请关闭上盖重新开始</string>
    <string name="exception_top_cover_opened_centrifugal">上盖被打开，请关闭上盖重新开始</string>
    <string name="exception_heating_failure">设备加热失效</string>
    <string name="exception_detect_glass_position_failure">未检测到载玻盘，请放入载玻盘</string>
    <string name="exception_weighing">设备称重异常</string>
    <string name="exception_reagent_not_enough">试剂 %s 不足，请添加试剂</string>
    <!-- string -->
    <string name="dialog_msg_cancel_tianchong">是否取消填充</string>
    <string name="dialog_msg_cancel_ranse">是否取消染色</string>
    <string name="dialog_msg_cancel_clean">是否取消清洗</string>
    <string name="dialog_msg_cancel_liulu">是否取消B-流路检测</string>
    <string name="dialog_msg_cancel_chengzhong">是否取消称重校验</string><!-- 称重校验 -->
    <string name="dialog_msg_over_clean">清洗结束，是否开始填充</string>
    <string name="dialog_msg_hint_liulutianchong">请拿出玻盘样本，完成流路填充</string>
    <string name="dialog_msg_dev_fill_request">管路需要填充，载玻片将被污染\n请先移除载玻盘，是否进行填充</string>
    <string name="dialog_msg_cancel_centrifugal">是否取消细胞离心</string>

    <string name="dialog_msg_clean_fill">清洗完成，是否进行填充</string>
    <!-- home -->
    <string name="home_slide_title">载玻片数量</string>
    <string name="home_info_title">当前设置：</string>
    <string name="home_info_ranse">染色厚度</string>
    <string name="home_info_jiejing">高锰酸钾</string>
    <string name="home_info_dianjiu">酸性酒精</string>
    <string name="home_info_guding">固定启动终止</string>
    
    <!-- clean progress -->
    <string name="clean_jet">正在喷射：</string>

    <string name="saffron">番红</string>
    <string name="alcohol_fixed">酒精固定</string>
    <string name="iodine">碘酒</string>
    <string name="crystal_violet">结晶紫</string>
    <string name="PROGRESS_STONE_CARBONATE">石碳酸复红</string>
    <string name="PROGRESS_ACID_ALCOHOL">酸性酒精</string>
    <string name="PROGRESS_METHYLENE_BLUE">亚甲基蓝</string>
    <string name="PROGRESS_RHODAMINE_B">罗丹明 B</string>
    <string name="PROGRESS_AURAMINE_O">金胺 O</string>
    <string name="PROGRESS_JETTING_KMNO4">高锰酸钾</string>
    <string name="PROGRESS_JETTING_RHODAMINE">金胺 O-罗丹明 B</string>
    <string name="PROGRESS_JETTING_FIRST_DYE">初染液</string>

    <string name="progress_clean_flow_path">正在清洗</string>
    <string name="progress_fill">正在填充</string>
    <string name="progress_dry">正在甩干</string>
    <string name="progress_wait">等待</string>
    <string name="progress_heat">正在加热</string>
    <string name="PROGRESS_CENTRIFUGAL">正在细胞离心</string>
    <string name="PROGRESS_CLEAN_PLUS">正在清洗</string>
    <string name="etc">...</string>

    <!-- site -->
    <string name="site_ranse">染色厚度设置</string>
    <string name="site_guding">固定启动终止</string>
    <string name="site_jiejing">高锰酸钾调整</string>
    <string name="site_dianjiu">酸性酒精调整</string>
    <string name="site_chenzhogn">称重启动终止</string>
    <string name="site_centrifugal">细胞离心</string>
    <string name="site_heat">加热选择</string>

    <!-- system -->
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="system_moshi">模式检测</string>
    <string name="system_liuliang">流量检测</string>
    <string name="system_bliulu">B-流路检测</string>
    <string name="system_chengzhong">称重校验</string>
    <string name="system_tianchong">填充流路</string>
    
    <!-- liu_chen -->
    <string name="step">STEP</string>
    <string-array name="STEP">
        <item>第一步：</item>
        <item>第二步：</item>
        <item>第三步：</item>
        <item>第四步：</item>
        <item>第五步：</item>
    </string-array>
    <!-- about -->
    <string name="sw_version">软件版本：</string>
    <string name="hw_version">硬件版本：</string>
    <string name="fw_version">固件版本：</string>
    <string name="date_time">日期和时间</string>
    <string name="screen_sleep_time">屏幕休眠时间</string>

    <!-- engineer -->
    <string name="a_pump">A泵占空比</string>
    <string name="b_pump">B泵占空比</string>
    <string name="c_pump">C泵占空比</string>
    <string name="d_pump">D泵占空比</string>
    <string name="e_pump">E泵占空比</string>
    <string name="cell_centrifugal_speed">细胞离心转速</string>
    
    <string-array name="loading_msgs">
        <item>获取版本信息...</item>
        <item>初始化系统参数...</item>
        <item>程序模块初始化中...</item>
        <item>设备初始化完成，即将进入主页面。</item>
        <item>进入主页面。</item>
    </string-array>
    
    <string-array name="menu_names">
        <item>主程序界面</item>
        <item>清洗</item>
        <item>参数设置</item>
        <item>系统维护</item>
        <item>关于</item>
    </string-array>
    
    <string-array name="site_grade">
        <item>低</item>
        <item>中</item>
        <item>高</item>
    </string-array>
    
    <string-array name="bliulu_steps">
        <item>请在B流路放500ML去离子水</item>
        <item>请在B流路放入200ML清洗剂</item>
        <item>请放入B液填充</item>
    </string-array>
    <string-array name="chenzhong_steps">
        <item>确认严格按照界面提示步骤操作</item>
        <item>请将载玻盘从设备移出</item>
        <item>请给每个容器内注入50ML试剂</item>
        <item>启动称重校验，大概需要5秒</item>
    </string-array>
    
    <string-array name="site_btn_ranses">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
    </string-array>
    <string-array name="site_btn_gudnigs">
        <item>关闭</item>
        <item>普通</item>
        <item>高效</item>
    </string-array>
    <string-array name="site_btn_jiejings">
        <item>高</item>
        <item>中</item>
        <item>低</item>
        <item>H</item>
    </string-array>
    <string-array name="site_btn_dianjius">
        <item>高</item>
        <item>中</item>
        <item>低</item>
    </string-array>
    <string-array name="site_btn_chengzhongs">
        <item>关闭</item>
        <item>启动</item>
    </string-array>
    <string-array name="site_btn_heat">
        <item>关闭</item>
        <item>启动</item>
    </string-array>

    <string-array name="engineer_btn_cell_centrifugal_speed">
        <item>1500</item>
        <item>2000</item>
    </string-array>

    <string-array name="screen_sleep_time">
        <item>15秒</item>
        <item>30秒</item>
        <item>1分钟</item>
        <item>2分钟</item>
        <item>5分钟</item>
        <item>10分钟</item>
        <item>30分钟</item>
    </string-array>
</resources>
